Added CSS Content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <title>Course Master</title>
 <link rel="stylesheet" href="mdl/material.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<style>
+div
+{
+	background-color: SlateBlue;
+	width: 20%;
+	height: 40%;
+	margin: 1%;
+	padding: 1%;
+	display: inline-block;
+}
+</style>
 </head>
 <body>
 
